syntax = "proto3";

package io.as.loanapp.action;

import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";
import "akkaserverless/annotations.proto";

import "io/as/loanapp/domain/loan_app_domain.proto";

option java_outer_classname = "LoanAppEventingToProcHandler";

service LoanAppEventingToProc {
  option (akkaserverless.codegen) = {
    action: {}
  };

  rpc OnSubmitted(domain.Submitted) returns (google.protobuf.Empty) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "loanapp"
    };
  }

  rpc IgnoreOtherEvents(google.protobuf.Any) returns (google.protobuf.Empty) {
    option (akkaserverless.method).eventing.in = {
      event_sourced_entity: "loanapp"
    };
  }
}