// This is the public API offered by your entity.
syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "akkaserverless/annotations.proto";
import "google/api/annotations.proto";

package io.as.loanproc.api;

option java_outer_classname = "LoanProcApi";

enum LoanProcStatus {
  STATUS_UNKNOWN = 0;
  STATUS_READY_FOR_REVIEW = 1;
  STATUS_APPROVED = 2;
  STATUS_DECLINED = 3;
}

message LoanProcState {
  string reviewer_id = 1;
  LoanProcStatus status = 2;
  string decline_reason = 3;
  google.protobuf.Timestamp last_update_timestamp = 4;
}

message ProcessCommand {
  string loan_app_id = 1 [(akkaserverless.field).entity_key = true];
  int64 client_monthly_income_cents = 2;
  int64 loan_amount_cents = 3;
  int32 loan_duration_months = 4;
}

message GetCommand {
  string loan_app_id = 1 [(akkaserverless.field).entity_key = true];
}

message ApproveCommand  {
  string loan_app_id = 1 [(akkaserverless.field).entity_key = true];
  string reviewer_id = 2;
}

message DeclineCommand  {
  string loan_app_id = 1 [(akkaserverless.field).entity_key = true];
  string reason = 2;
  string reviewer_id = 3;
}

service LoanProcService {
  option (akkaserverless.codegen) = {
    event_sourced_entity: {
      name: "io.as.loanproc.domain.LoanProcEntity"
      entity_type: "loanproc"
      state: "io.as.loanproc.domain.LoanProcDomainState"
      events: [
        "io.as.loanproc.domain.ReadyForReview",
        "io.as.loanproc.domain.Approved",
        "io.as.loanproc.domain.Declined"
      ]
    }
  };
  rpc Process(ProcessCommand) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/loanproc/{loan_app_id}"
      body: "*"
    };
  }

  rpc Get(GetCommand) returns (LoanProcState) {
    option (google.api.http) = {
      get: "/loanproc/{loan_app_id}"
    };
  }

  rpc Approve(ApproveCommand) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/loanproc/{loan_app_id}/approve"
    };
  }

  rpc Decline(DeclineCommand) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/loanproc/{loan_app_id}/decline"
      body: "*"
    };
  }
}